--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,3 +55,5 @@ stages:
         ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
         ARM_TENANT_ID: $(ARM_TENANT_ID)
         ARM_ACCESS_KEY: $(ARM_ACCESS_KEY)
+        TF_VAR_acr_username: $(acr_username)
+        TF_VAR_acr_password: $(acr_password)
